# behave

./: .gitignore  CMakeLists.txt  Doxyfile  GitBehave.sln  GitBehave.vcxproj  GitBehave.vcxproj.filters  LICENCE.md  Makefile  README.md  behave.i  contain.csv  process.org  setup.py  shell.nix  surface.csv
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml
data/: behave.cfg
docs/: ContainAdapter_8h_source.html  ContainForceAdapter_8h_source.html  ContainForce_8cpp.html  ContainForce_8h.html  ContainForce_8h_source.html  ContainResource_8cpp.html  ContainResource_8h.html  ContainResource_8h_source.html  ContainSim_8cpp.html  ContainSim_8h.html  ContainSim_8h_source.html  Contain_8cpp.html  Contain_8h.html  Contain_8h_source.html  CrownFirebrandProcessor_8h_source.html  _contain_8cpp.html  _contain_8h.html  _contain_8h_source.html  _contain_adapter_8h_source.html  _contain_force_8cpp.html  _contain_force_8h.html  _contain_force_8h_source.html  _contain_force_adapter_8h_source.html  _contain_resource_8cpp.html  _contain_resource_8h.html  _contain_resource_8h_source.html  _contain_sim_8cpp.html  _contain_sim_8h.html  _contain_sim_8h_source.html  annotated.html  behaveRun_8h_source.html  behaveUnits_8h_source.html  behave_run_8h_source.html  behave_units_8h_source.html  canopy__coefficient__table_8h_source.html  chaparralFuel_8h_source.html  chaparral_fuel_8h_source.html  classBehaveRun-members.html  classBehaveRun.html  classCanopyCoefficientTable-members.html  (+516 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  (+33 more)
src/: ContainResource.cpp  ContainResource.h  ContainSim.cpp  aspenMortality.cpp  behave.cpp  behave.h  behavePlus.cpp  behavePlus.h  cli.cpp  client.cpp  crownFireSpreadRate.cpp  fuelModels.cpp  fuelModels.h  newext.cpp  newext.h  palmettoGallberry.cpp  palmettoGallberry.h  randfuel.cpp  randfuel.h  randthread.cpp  randthread.h  surface.cpp  surface.h  surfaceEnums.h  surfaceFireEccentricity.h  surfaceFireLengthToWidthRatio.cpp  surfaceFirePropogatingFlux.cpp  surfaceFirePropogatingFlux.h  surfaceFireReactionIntensity.cpp  surfaceFireReactionIntensity.h  surfaceFireResidenceTime.cpp  surfaceFireResidenceTime.h  surfaceFireSpread.cpp  surfaceFireSpread.h  surfaceFirelineIntensity.h  surfaceFuelbedHeatSink.h  surfaceFuelbedIntermediates.cpp  surfaceFuelbedIntermediates.h  surfaceInputs.cpp  surfaceInputs.h  (+9 more)
src/behave/: Contain.cpp  Contain.h  ContainAdapter.cpp  ContainAdapter.h  ContainForce.cpp  ContainForce.h  ContainForceAdapter.cpp  ContainForceAdapter.h  ContainResource.cpp  ContainResource.h  ContainSim.cpp  ContainSim.h  CrownFirebrandProcessor.cpp  CrownFirebrandProcessor.h  ReadMe.txt  aspenMortality.h  behave.cpp  behave.h  behaveRun.cpp  behaveRun.h  behaveUnits.cpp  behaveUnits.h  behaveVector.cpp  behaveVector.h  canopy_coefficient_table.cpp  canopy_coefficient_table.h  chaparralFuel.cpp  chaparralFuel.h  client.cpp  contain.cpp  contain.h  containAdapter.cpp  containAdapter.h  containForce.cpp  containForce.h  crown.cpp  crown.h  crownEnums.h  crownFireSpreadRate.h  crownInputs.cpp  (+81 more)
src/behave_qt/: ReadMe.txt  behave_qt_main_window.cpp  behave_qt_main_window.h  behave_qt_main_window.qrc  behave_qt_main_window.ui  behave_qtree_widget.cpp  behave_qtree_widget.h  main.cpp  qcustomplotTest.cpp  qcustomplotTest.h  qcustomplot_test.ui  qtIncludesSilencedW4.h
src/behave_qt/src/: behave_qt_main_window.ui  behave_qt_main_window_enums.h
src/canopyFlow/: .project  ReadMe.txt  canopy.h  canopyFlow.cpp  canopyFlow.h  canopy_normal_distribution.cpp  canopy_triangle_distribution.cpp  canopy_triangle_distribution.h  main.cpp  measured_distribution.h
src/canopyFlow/data/: Aspen_Wind.txt  Aspen_canopy_distribution.txt
src/canopyFlow/src/: .cproject  canopy.cpp  canopy_normal_distribution.h  main.cpp  massman_distribution.cpp  massman_distribution.h  measured_distribution.cpp
src/cli/: ReadMe.txt  behaveCli.cpp
src/cli/src/: behaveCli.cpp
src/qcustomplot/: qcustomplot.cpp  qcustomplot.h
src/rawsBatch/: behaveRawsBatch.cpp
src/spotDistancePile/: computePileSpottingDistance.cpp
src/spotDistanceSurface/: computeSurfaceSpottingDistance.cpp
src/spotDistanceTorchingTrees/: computeTorchingTreesSpottingDistance.cpp
src/testBehave/: testBehave.cpp  testContain.cpp  testSurface.cpp
src/testMortality/: FOFEM_Mortality_Output.csv  FOFEM_input.tre  mortality_client.cpp  resultsProbMort.csv
swig/: AreaUnits.cs  AspenFireSeverity.cs  BasalAreaUnits.cs  Behave.cs  BehaveCore.cs  BehaveCorePINVOKE.cs  BehavePINVOKE.cs  ChaparralContants.cs  ChaparralFuelLoadInputMode.cs  ChaparralFuelType.cs  Crown.cs  DensityUnits.cs  FireType.cs  FirelineIntensityUnits.cs  FractionUnits.cs  FuelConstants.cs  FuelLifeState.cs  FuelModels.cs  HeatOfCombustionUnits.cs  HeatPerUnitAreaUnits.cs  HeatSinkUnits.cs  HeatSourceAndReactionIntensityUnits.cs  LengthUnits.cs  LoadingUnits.cs  MoistureClassInput.cs  MoistureInputMode.cs  PressureUnits.cs  Readme.txt  SWIGTYPE_p_MoistureScenarios.cs  SWIGTYPE_p_std__string.cs  SlopeUnits.cs  SpeedUnits.cs  Surface.cs  SurfaceAreaToVolumeUnits.cs  SurfaceFireSpreadDirectionMode.cs  TemperatureUnits.cs  TimeUnits.cs  TwoFuelModelsContants.cs  TwoFuelModelsMethod.cs  WindAdjustmentFactorCalculationMethod.cs  (+5 more)
